--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,35 @@ body
 	background-color:#CCC;
 }
 
+.inputFields
+{
+	width:215px;
+	height:27px;
+	padding-left:5px;
+	border:1px solid #999;
+	outline:none;
+	border-radius:2px;
+	transition:0.3s linear;
+}
+
+.inputFields:focus
+{
+	border:1px solid #000;
+	box-shadow:0px 0px 10px #333;
+}
+
+.theButtons
+{
+	width:222px;
+	height:40px;
+	background-color:#335495;
+	border:2px solid blue;
+	font-weight:bold;
+	font-family:tahoma;
+	color:#FFF;
+	border-radius:2px;
+}
+
 #menu
 {
 	width:990px;
@@ -31,8 +60,16 @@ body
 
 #error
 {
-	width:1000px;
+	width:990px;
 	margin:0px auto;
+	height:30px;
+	background-color:red;
+	margin-top:40px;
+	padding-left:10px;
+	color:#FFF;
+	font-weight:bold;
+	font-size:14px;
+	display:none;
 }
 
 #wrapper
@@ -41,7 +78,6 @@ body
 	background-color:#FFF;
 	margin:0px auto;
 	min-height:400px;
-	margin-top:40px;
 	border:1px solid #999;
 	border-bottom:3px solid #999;
 	border-radius:5px;  
@@ -50,7 +86,9 @@ body
 
 #formDiv
 {
-	width:200px;
+	width:300px;
 	margin:0px auto;
 	margin-top:20px;
+	font-family:tahoma;
+	font-size:14px;
 }
